# datfiles

./: README.md
.github/: dependabot.yml
.scraper/: datfile.py  main.py  no_intro.py  pyproject.toml  redump.py  requests_util.py
_scraper/: main.py  pyproject.toml
no-intro/: Apple - II (A2R).xml  Apple - II (WOZ).xml  Apple - II (Waveform).xml  Apple - Macintosh (A2R).xml  Apple - Macintosh (DC42).xml  Apple - Macintosh (KryoFlux).xml  Apple - Macintosh (Uncategorized).xml  Apple - Macintosh (WOZ).xml  Arcade - PC-based.xml  Atari - 8-bit Family (Kryoflux).xml  Atari - 8-bit Family.xml  Atari - Atari 2600.xml  Atari - Atari 7800 (A78).xml  Atari - Atari 7800 (BIN).xml  Atari - Atari Jaguar (ABS).xml  Atari - Atari Jaguar (COF).xml  Atari - Atari Jaguar (J64).xml  Atari - Atari Jaguar (JAG).xml  Atari - Atari Jaguar (ROM).xml  Atari - Atari Lynx (BLL).xml  Atari - Atari Lynx (LNX).xml  Atari - Atari Lynx (LYX).xml  Atari - Atari ST (Flux).xml  Atari - Atari ST.xml  Bandai - Design Master Denshi Mangajuku.xml  Bandai - WonderSwan.xml  Bandai Little Jammer (BIN).xml  Bandai Little Jammer Pro (BIN).xml  Benesse - Pocket Challenge V2.xml  Benesse - Pocket Challenge W.xml  Blaze Entertainment - Evercade.xml  Coleco - ColecoVision.xml  Commodore - Commodore 64 (Headerless).xml  Commodore - Commodore 64.xml  Epoch - Super Cassette Vision.xml  Fujitsu - FMR50 (Flux).xml  Funtech - Super Acan.xml  GCE - Vectrex.xml  GamePark - GP2X.xml  Hitachi - S1 (Waveform).xml  (+74 more)
redump/: Acorn Archimedes.xml  Apple Macintosh.xml  Arcade - Konami - FireBeat.xml  Arcade - Sega - Naomi.xml  (+54 more)
(+1 files in other folders)
